--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@wagmi/core": "^2.6.9",
     "autoprefixer": "10.4.15",
     "bs58": "^5.0.0",
     "class-variance-authority": "^0.7.0",
