--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@wagmi/core": "^2.6.9",
+    "@wagmi/connectors": "^5.7.12",
     "autoprefixer": "10.4.15",
     "bs58": "^5.0.0",
     "class-variance-authority": "^0.7.0",
