--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@wagmi/core": "^2.6.9",
-    "@wagmi/connectors": "^5.7.12",
     "autoprefixer": "10.4.15",
     "bs58": "^5.0.0",
     "class-variance-authority": "^0.7.0",
@@ -74,6 +73,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
+    "wagmi": "^2.5.7",
     "zod": "^3.23.8"
   }
 }
